Mark vacuous pass in android digioffice protocol